Move notifications admin actions to core AdminController. Dynamically generate the appropriate columns in the supporting table based on the registered config providers.